export CA for TinyCA

--- a/ExportTinyCA_UI.ui
+++ b/ExportTinyCA_UI.ui
@@ -1,23 +1,23 @@
 <!DOCTYPE UI><UI>
-<class>ExportCert_UI</class>
+<class>ExportTinyCA_UI</class>
 <widget>
     <class>QDialog</class>
     <property stdset="1">
         <name>name</name>
-        <cstring>ExportCert_UI</cstring>
+        <cstring>ExportTinyCA_UI</cstring>
     </property>
     <property stdset="1">
         <name>geometry</name>
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>527</width>
-            <height>319</height>
+            <width>589</width>
+            <height>300</height>
         </rect>
     </property>
     <property stdset="1">
         <name>caption</name>
-        <string>Certificate export</string>
+        <string>CA export</string>
     </property>
     <vbox>
         <property stdset="1">
@@ -32,7 +32,7 @@
             <class>QLayoutWidget</class>
             <property stdset="1">
                 <name>name</name>
-                <cstring>Layout9</cstring>
+                <cstring>Layout9_2</cstring>
             </property>
             <hbox>
                 <property stdset="1">
@@ -47,7 +47,7 @@
                     <class>QLabel</class>
                     <property stdset="1">
                         <name>name</name>
-                        <cstring>TextLabel12</cstring>
+                        <cstring>TextLabel12_2</cstring>
                     </property>
                     <property stdset="1">
                         <name>font</name>
@@ -59,13 +59,13 @@
                     </property>
                     <property stdset="1">
                         <name>text</name>
-                        <string>Certificate export</string>
+                        <string>TinyCA export</string>
                     </property>
                 </widget>
                 <spacer>
                     <property>
                         <name>name</name>
-                        <cstring>Spacer6</cstring>
+                        <cstring>Spacer6_2</cstring>
                     </property>
                     <property stdset="1">
                         <name>orientation</name>
@@ -87,7 +87,7 @@
                     <class>QLabel</class>
                     <property stdset="1">
                         <name>name</name>
-                        <cstring>image</cstring>
+                        <cstring>image_2</cstring>
                     </property>
                     <property stdset="1">
                         <name>minimumSize</name>
@@ -110,59 +110,27 @@
                 </widget>
             </hbox>
         </widget>
-        <widget>
-            <class>QLayoutWidget</class>
-            <property stdset="1">
+        <spacer>
+            <property>
                 <name>name</name>
-                <cstring>Layout3</cstring>
+                <cstring>Spacer10</cstring>
             </property>
-            <hbox>
-                <property stdset="1">
-                    <name>margin</name>
-                    <number>0</number>
-                </property>
-                <property stdset="1">
-                    <name>spacing</name>
-                    <number>6</number>
-                </property>
-                <widget>
-                    <class>QLabel</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>TextLabel13</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>sizePolicy</name>
-                        <sizepolicy>
-                            <hsizetype>7</hsizetype>
-                            <vsizetype>5</vsizetype>
-                        </sizepolicy>
-                    </property>
-                    <property stdset="1">
-                        <name>text</name>
-                        <string>Please enter the filename for the certificate.</string>
-                    </property>
-                </widget>
-                <widget>
-                    <class>QPushButton</class>
-                    <property stdset="1">
-                        <name>name</name>
-                        <cstring>PushButton3</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>sizePolicy</name>
-                        <sizepolicy>
-                            <hsizetype>1</hsizetype>
-                            <vsizetype>0</vsizetype>
-                        </sizepolicy>
-                    </property>
-                    <property stdset="1">
-                        <name>text</name>
-                        <string>TinyCA filename</string>
-                    </property>
-                </widget>
-            </hbox>
-        </widget>
+            <property stdset="1">
+                <name>orientation</name>
+                <enum>Vertical</enum>
+            </property>
+            <property stdset="1">
+                <name>sizeType</name>
+                <enum>Expanding</enum>
+            </property>
+            <property>
+                <name>sizeHint</name>
+                <size>
+                    <width>20</width>
+                    <height>20</height>
+                </size>
+            </property>
+        </spacer>
         <widget>
             <class>QFrame</class>
             <property stdset="1">
@@ -194,14 +162,14 @@
                     </property>
                     <property stdset="1">
                         <name>text</name>
-                        <string>Filename:</string>
+                        <string>Templatedir:</string>
                     </property>
                 </widget>
                 <widget>
                     <class>QLineEdit</class>
                     <property stdset="1">
                         <name>name</name>
-                        <cstring>filename</cstring>
+                        <cstring>tempdir</cstring>
                     </property>
                 </widget>
                 <widget>
@@ -225,30 +193,10 @@
             </hbox>
         </widget>
         <widget>
-            <class>QLabel</class>
-            <property stdset="1">
-                <name>name</name>
-                <cstring>TextLabel3</cstring>
-            </property>
-            <property stdset="1">
-                <name>text</name>
-                <string>DER is a binary format of the Certificate
-PEM is a base64 encoded Certificate
-PKCS#12 is an encrypted official Key-Certificate exchange format</string>
-            </property>
-            <property stdset="1">
-                <name>alignment</name>
-                <set>WordBreak|AlignVCenter|AlignLeft</set>
-            </property>
-            <property>
-                <name>wordwrap</name>
-            </property>
-        </widget>
-        <widget>
             <class>QFrame</class>
             <property stdset="1">
                 <name>name</name>
-                <cstring>Frame4</cstring>
+                <cstring>Frame5_2_2</cstring>
             </property>
             <property stdset="1">
                 <name>frameShape</name>
@@ -271,29 +219,122 @@ PKCS#12 is an encrypted official Key-Certificate exchange format</string>
                     <class>QLabel</class>
                     <property stdset="1">
                         <name>name</name>
-                        <cstring>TextLabel1</cstring>
+                        <cstring>TextLabel14_2</cstring>
                     </property>
                     <property stdset="1">
                         <name>text</name>
-                        <string>Export Format:</string>
+                        <string>TinyCA Directory:</string>
                     </property>
                 </widget>
                 <widget>
-                    <class>QComboBox</class>
+                    <class>QLineEdit</class>
                     <property stdset="1">
                         <name>name</name>
-                        <cstring>exportFormat</cstring>
+                        <cstring>tinycadir</cstring>
+                    </property>
+                </widget>
+                <widget>
+                    <class>QToolButton</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>ToolButton1_2</cstring>
                     </property>
                     <property stdset="1">
                         <name>sizePolicy</name>
                         <sizepolicy>
-                            <hsizetype>7</hsizetype>
+                            <hsizetype>1</hsizetype>
                             <vsizetype>0</vsizetype>
                         </sizepolicy>
+                    </property>
+                    <property stdset="1">
+                        <name>text</name>
+                        <string>...</string>
                     </property>
                 </widget>
             </hbox>
         </widget>
+        <widget>
+            <class>QFrame</class>
+            <property stdset="1">
+                <name>name</name>
+                <cstring>Frame5_2_2_2</cstring>
+            </property>
+            <property stdset="1">
+                <name>frameShape</name>
+                <enum>Box</enum>
+            </property>
+            <property stdset="1">
+                <name>frameShadow</name>
+                <enum>Sunken</enum>
+            </property>
+            <hbox>
+                <property stdset="1">
+                    <name>margin</name>
+                    <number>11</number>
+                </property>
+                <property stdset="1">
+                    <name>spacing</name>
+                    <number>6</number>
+                </property>
+                <widget>
+                    <class>QLabel</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>TextLabel14_2_2</cstring>
+                    </property>
+                    <property stdset="1">
+                        <name>text</name>
+                        <string>Name:</string>
+                    </property>
+                </widget>
+                <widget>
+                    <class>QLineEdit</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>dname</cstring>
+                    </property>
+                </widget>
+                <widget>
+                    <class>QToolButton</class>
+                    <property stdset="1">
+                        <name>name</name>
+                        <cstring>ToolButton1_2_2</cstring>
+                    </property>
+                    <property stdset="1">
+                        <name>sizePolicy</name>
+                        <sizepolicy>
+                            <hsizetype>1</hsizetype>
+                            <vsizetype>0</vsizetype>
+                        </sizepolicy>
+                    </property>
+                    <property stdset="1">
+                        <name>text</name>
+                        <string>...</string>
+                    </property>
+                </widget>
+            </hbox>
+        </widget>
+        <spacer>
+            <property>
+                <name>name</name>
+                <cstring>Spacer8</cstring>
+            </property>
+            <property stdset="1">
+                <name>orientation</name>
+                <enum>Vertical</enum>
+            </property>
+            <property stdset="1">
+                <name>sizeType</name>
+                <enum>Expanding</enum>
+            </property>
+            <property>
+                <name>sizeHint</name>
+                <size>
+                    <width>20</width>
+                    <height>20</height>
+                </size>
+            </property>
+        </spacer>
         <widget>
             <class>QLayoutWidget</class>
             <property stdset="1">
@@ -358,42 +399,30 @@ PKCS#12 is an encrypted official Key-Certificate exchange format</string>
 </widget>
 <connections>
     <connection>
+        <sender>PushButton9</sender>
+        <signal>clicked()</signal>
+        <receiver>ExportTinyCA_UI</receiver>
+        <slot>reject()</slot>
+    </connection>
+    <connection>
         <sender>PushButton7</sender>
         <signal>clicked()</signal>
-        <receiver>ExportCert_UI</receiver>
+        <receiver>ExportTinyCA_UI</receiver>
         <slot>accept()</slot>
     </connection>
     <connection>
-        <sender>PushButton9</sender>
+        <sender>ToolButton1_2</sender>
         <signal>clicked()</signal>
-        <receiver>ExportCert_UI</receiver>
-        <slot>reject()</slot>
+        <receiver>ExportTinyCA_UI</receiver>
+        <slot>chooseTinyCaDir()</slot>
     </connection>
     <connection>
         <sender>ToolButton1</sender>
         <signal>clicked()</signal>
-        <receiver>ExportCert_UI</receiver>
-        <slot>chooseFile()</slot>
+        <receiver>ExportTinyCA_UI</receiver>
+        <slot>chooseTempDir()</slot>
     </connection>
-    <connection>
-        <sender>exportFormat</sender>
-        <signal>activated(const QString&amp;)</signal>
-        <receiver>ExportCert_UI</receiver>
-        <slot>formatChanged()</slot>
-    </connection>
-    <connection>
-        <sender>PushButton3</sender>
-        <signal>clicked()</signal>
-        <receiver>ExportCert_UI</receiver>
-        <slot>setTinyCAfname()</slot>
-    </connection>
-    <slot access="public">chooseFile()</slot>
-    <slot access="public">formatChanged()</slot>
-    <slot access="public">setTinyCAfname()</slot>
+    <slot access="public">chooseTempDir()</slot>
+    <slot access="public">chooseTinyCaDir()</slot>
 </connections>
-<tabstops>
-    <tabstop>filename</tabstop>
-    <tabstop>PushButton7</tabstop>
-    <tabstop>PushButton9</tabstop>
-</tabstops>
 </UI>
